# photo-sharing

./: .gitignore  CLAUDE.md  README.md
deploy/: deploy-api.ps1  deploy-web.ps1
docs/: implementation-plan.md
docs/architecture/: overview.md
docs/design/: database-schema.md  date-tags.md  edit-history.md  face-recognition.md  frontend.md  image-processing.md  place-tags.md
docs/migration/: auth0-migration-plan.md
infra/: bootstrap-db.ps1  deploy-vpn.ps1  deploy.ps1  get-vpn-config.ps1  grant-db-access.ps1  main.bicep  update-hosts.ps1  vpn.bicep
infra/modules/: acr.bicep  containerapp.bicep  networking.bicep  postgres.bicep  staticwebapp.bicep  storage.bicep  vpn-gateway.bicep
src/api/: PhotoSharing.sln
src/api/PhotoSharing.Api/: Dockerfile  PhotoSharing.Api.csproj  PhotoSharing.Api.http  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
src/api/PhotoSharing.Api/Configuration/: BlobStorageOptions.cs
src/api/PhotoSharing.Api/Controllers/: FacesController.cs  PersonsController.cs  PhotosController.cs  PlacesController.cs  WeatherForecastController.cs
src/api/PhotoSharing.Api/DTOs/: PagedResponse.cs
src/api/PhotoSharing.Api/Data/: DesignTimeDbContextFactory.cs  PhotoSharingDbContext.cs  TokenExpiryRetryStrategy.cs
src/tools/: recent-edits.cs
src/uploader/: pyproject.toml
src/uploader/uploader/: __init__.py  config.py  database.py  embeddings.py  faces.py  folder_metadata.py  geocoding.py  hash.py  image_processing.py  main.py  storage.py
src/web/: .env.example  package-lock.json  package.json
src/web/src/: App.tsx
(+58 files in other folders)
